--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "watch": "rollup --watch"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,9 @@
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.3.0"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.320.0",
+    "mime": "^2.3.1"
   }
 }
